1 cms left to do then im free

--- a/public/css/cms.css
+++ b/public/css/cms.css
@@ -1,141 +1,5 @@
-.cms {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: hsl(0, 0%, 98%);
-  font-size: 60%;
-  cursor:default;
-}
-.cmsForm {
-  display: flex;
-  flex-direction: column;
-  padding:2vw;
-}
-.cmsForm div {
-  display: flex;
-  gap:2vw;
-  padding:1vw;
-}
-.cmsForm div textarea {
-  width:100%;
-}
-.cms div label {
-  font-size: 120%;
-  text-transform: capitalize;
-}
-.cmsForm div input {
-  padding:0.5vw;
-}
-.cmsForm button {
-  width:fit-content;
-  color:#000;
-  padding:0.5vw;
-  border:2px solid lightgreen;
-  border-radius: 0.5vw;
-}
-.cmsForm button:hover {
-  font-weight: bold;
-  background-color: green;
-  color:white;
-}
-.mlinks-container {
-  display:flex;
-  flex-direction:column;
-  gap:0.5rem;
-}
-.mlink-inputs {
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  border:2px solid white;
-  width:auto;
-  gap:0.2rem;
-  border:2px solid pink;
-}
-
-
-
-
 
 .dashboard {
-  text-align: center;
-  width: min-content;
-  margin:2vw auto;
+  width: 100vw;
+  padding:2rem;
 }
-.dashboard .dashboardDivs {
-  margin-bottom: 4vw;
-}
-.dashboard .dashboardDivs .dashboardDivsH2 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: gray;
-  padding:0.4vw 1vw;
-  font-size: 90%;
-}
-.dashboard #pus{
-  display:none;
-}
-.cms .cmsDivs {
-  width: min-content;
-  min-width: 80vw;
-  display: flex;
-  flex-direction: column;
-  margin:0 auto 2vw auto;
-  background-color: hsl(0, 0%, 92%);
-  border-radius: 1vw;
-  text-align: left;
-}
-.cms .cmsDivs .cmsContent {
-  display:none;
-}
-.cms .cmsDivs .cmsDivsH2 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  white-space: nowrap;
-  background-color: rgb(171, 170, 170);
-  padding:0.4vw 1vw;
-  border-top-left-radius: 0.5vw;
-  border-top-right-radius: 0.5vw;
-  color:#fff;
-}
-
-.cms .cmsDivs .cmsDivsH2 i:nth-child(3){
-  display: none;
-}
-.cms .cmsDivs .cmsBoxDisplay {
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  background-color: hsl(0, 0%, 98%);
-  border-radius:0.5vw;
-  padding:1vw;
-  display: flex;
-  gap:1vw;
-}
-.cms .cmsDivs .cmsBoxDelete {
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  background-color: hsl(0, 0%, 98%);
-  border-radius:0.5vw;
-  padding:1vw;
-  display: flex;
-  flex-direction: column;
-  gap:1vw;
-  margin:1vw;
-}
-.cms .cmsDivs .cmsBoxDelete .cmsActions {
-  display: flex;
-  justify-content: space-around;
-}
-.cms .cmsDivs .cmsBoxDelete .cmsActions button {
-  border:none;
-}
-.cmsSaveButton i {
-  
-  font-size:3vw !important;
-}
-.cmsDeleteButton i {
-  color:red !important;
-  font-size:3vw !important;
-}
-
