cms is finished except a few delete buttons

--- a/public/css/ibm.css
+++ b/public/css/ibm.css
@@ -8,11 +8,38 @@
   --c-white: hsl(0, 0%, 76%);
   --d-white: hsl(0, 0%, 36%);
 }
+
+
+  @font-face {
+  font-family: 'Segoe UI Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Segoe UI Regular'), url('../segoe/Segoe UI.woff') format('woff');
+  }
+  @font-face {
+  font-family: 'Segoe UI Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Segoe UI Italic'), url('../segoe/Segoe UI Italic.woff') format('woff');
+  }
+  @font-face {
+  font-family: 'Segoe UI Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Segoe UI Bold'), url('../segoe/Segoe UI Bold.woff') format('woff');
+  }
+  @font-face {
+  font-family: 'Segoe UI Bold Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Segoe UI Bold Italic'), url('../segoe/Segoe UI Bold Italic.woff') format('woff');
+  }
+
 * {
   padding: 0 0 0 0;
   margin: 0 0 0 0;
   font-size:92%;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Segoe UI Bold Regular';
   box-sizing: border-box;
 }
 body {
