--- a/public/css/cms.css
+++ b/public/css/cms.css
@@ -2,7 +2,8 @@
 .dashboard {
   width: 100vw;
   padding:2rem;
-  background-color: hsl(138, 58%, 63%);
+  background-color: hsl(27, 93%, 17%);
+  background-color: rgb(144, 177, 122);
 }
 
 
@@ -30,13 +31,14 @@ section#index ul li a {
   padding:1vw 2vw;
   min-height: 100%;
   font-weight: 800;
+  border-radius: 0.3vw;
 }
 section#index ul li a:hover {
   color:#ffffff;
 
   -webkit-box-shadow: 5px -4px 10px -1px rgba(63, 62, 62, 0.34), -5px 4px 10px -1px rgba(60, 59, 59, 0.34);
 -moz-box-shadow: 5px -4px 10px -1px rgba(75, 75, 75, 0.34), -5px 4px 10px -1px rgba(0,0,0,0.34);
-box-shadow: 5px -4px 10px -1px rgba(61, 61, 61, 0.34), -5px 4px 10px -1px rgba(49, 49, 49, 0.34) 0.34);
+box-shadow: 5px -4px 10px -1px rgba(61, 61, 61, 0.34), -5px 4px 10px -1px rgba(49, 49, 49, 0.34);
 }
 
 input {
@@ -107,12 +109,14 @@ button {
 
 .create {
   display:block !important;
-  color: #ffc107;
-  border-color: #ffc107;
+  margin-bottom: 1rem;
+  margin-right:auto;
+  color: #0d6efd;
+  border-color: #0d6efd;
 }
 .create:hover {
   color: #fff;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
 }
     
